force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/VN_ResumoCargasDadosTemp__c.object-meta.xml
<CustomObject>
    <description>Carga de dados temporária das integrações com o Fielo.</description>
    <label>Resumo Carga de Dados Temp</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>No. Resumo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resumos Cargas de Dados Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>