force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_CargaConsumoTemporariaFinalizada__c.field-meta.xml
<CustomField>
    <fullName>V_CargaConsumoTemporariaFinalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a carga de dados foi finalizada no Fielo.</description>
    <inlineHelpText>Indica se a carga de dados foi finalizada no Fielo.</inlineHelpText>
    <label>Carga de Dados Temporária Finalizada?</label>
    <type>Checkbox</type>
</CustomField>