force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_DataCarga__c.field-meta.xml
<CustomField>
    <fullName>V_DataCarga__c</fullName>
    <description>Data em que a carga de dados foi criada.</description>
    <inlineHelpText>Data em que a carga de dados foi criada.</inlineHelpText>
    <label>Data da Carga</label>
    <type>Date</type>
</CustomField>