force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_NomeArquivo__c.field-meta.xml
<CustomField>
    <fullName>V_NomeArquivo__c</fullName>
    <description>Nome do arquivo utilizado para a carga de dados.</description>
    <inlineHelpText>Nome do arquivo utilizado para a carga de dados.</inlineHelpText>
    <label>Nome do Arquivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>