force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_NotificarPOP__c.field-meta.xml
<CustomField>
    <fullName>V_NotificarPOP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se assinalado, enviar alerta de email para os responsáveis das áreas envolvidas.</description>
    <inlineHelpText>Se assinalado, enviar alerta de email para os responsáveis das áreas envolvidas.</inlineHelpText>
    <label>Notificar POP</label>
    <type>Checkbox</type>
</CustomField>