force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_PossuiImpeditivo__c.field-meta.xml
<CustomField>
    <fullName>V_PossuiImpeditivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se assinalado, existem registros que não estão em conformidade e que precisam ser revisados e normalizados.</description>
    <inlineHelpText>Se assinalado, existem registros que não estão em conformidade e que precisam ser revisados e normalizados.</inlineHelpText>
    <label>Possui Impeditivo?</label>
    <type>Checkbox</type>
</CustomField>