force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_PrecisaRecalcular__c.field-meta.xml
<CustomField>
    <fullName>V_PrecisaRecalcular__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica a necessidade de recalcular toda a carga de consumo.</description>
    <inlineHelpText>Indica a necessidade de recalcular toda a carga de consumo.</inlineHelpText>
    <label>Precisa Recalcular?</label>
    <type>Checkbox</type>
</CustomField>