force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>V_StatusAprovacao__c</fullName>
    <description>Status do processo de aprovação relizado pelo responsável.</description>
    <inlineHelpText>Status do processo de aprovação relizado pelo responsável.</inlineHelpText>
    <label>Status da Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>