force-app/main/default/objects/VN_ResumoCargasDadosTemp__c/fields/V_StatusPDI__c.field-meta.xml
<CustomField>
    <fullName>V_StatusPDI__c</fullName>
    <description>Status de processamento do arquivo recebido (processo automático).</description>
    <inlineHelpText>Status do ETL, aplicação que importa a carga de consumo (processo automático).</inlineHelpText>
    <label>Status do PDI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carregando</fullName>
                <default>true</default>
                <label>Carregando</label>
            </value>
            <value>
                <fullName>Carregado</fullName>
            </value>
            <value>
                <fullName>Validado Com Erro</fullName>
            </value>
            <value>
                <fullName>Validado Sem Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>